<resources>
    <string name="app_name">Calculator</string>
    <string name="engineering">Engineering</string>
    <string name="programming">Programming</string>
    <string name="simple">Simple</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="clear">C</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="sign">+/-</string>
    <string name="brackets">()</string>
    <string name="cancel">DEL</string>
    <string name="factorial">x!</string>
    <string name="root">^</string>
    <string name="persent">%</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="oneDivX">1/x</string>
    <string name="ePowX">e^x</string>
    <string name="xPowTwo">x^2</string>
    <string name="yPowX">y^x</string>
    <string name="modul">|x|</string>
    <string name="pi">pi</string>
    <string name="e">e</string>
    <string name="F">F</string>
    <string name="E">E</string>
    <string name="D">D</string>
    <string name="C">C</string>
    <string name="B">B</string>
    <string name="A">A</string>
    <string name="and">and</string>
    <string name="or">or</string>
    <string name="xor">xor</string>
    <string name="not">not</string>
    <string name="DEC">DEC</string>
    <string name="HEX">HEX</string>
    <string name="OCT">OCT</string>
    <string name="BIN">BIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
