<TableLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.calculator.BinaryFragment"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_gravity="bottom"
android:shrinkColumns="*"
android:stretchColumns="*">
<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:shrinkColumns="*"
    android:stretchColumns="*">
    <TableRow>
        <TextView
            android:text="@string/HEX"/>
        <EditText
            android:id="@+id/HEX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_span="7"/>
        <TextView
            android:text="@string/DEC"/>
        <EditText
            android:id="@+id/DEC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_span="7"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/OCT"/>
        <EditText
            android:id="@+id/OCT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_span="7"/>
        <TextView
            android:text="@string/BIN"/>
        <EditText
            android:id="@+id/BIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_span="7"/>
    </TableRow>
</TableLayout>


<TableRow>
    <EditText
        android:id="@+id/viewNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="7"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />
</TableRow>

<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:shrinkColumns="*"
    android:stretchColumns="*">
    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/not"
            android:text="@string/not"
            android:onClick="onClick"/>
        <Button />
        <Button />
        <Button />
        <Button />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/divide"
            android:text="@string/divide"
            android:onClick="onClick"/>
    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/xor"
            android:text="@string/xor"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/or"
            android:text="@string/or"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/and"
            android:text="@string/and"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/clear"
            android:text="@string/clear"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/multiply"
            android:text="@string/multiply"
            android:onClick="onClick"/>
    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/A"
            android:text="@string/A"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/B"
            android:text="@string/B"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/four"
            android:text="@string/four"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/five"
            android:text="@string/five"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/six"
            android:text="@string/six"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/minus"
            android:text="@string/minus"
            android:onClick="onClick"/>
    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/C"
            android:text="@string/C"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/D"
            android:text="@string/D"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/one"
            android:text="@string/one"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/two"
            android:text="@string/two"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/factorial"
            android:text="@string/three"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/plus"
            android:text="@string/plus"
            android:onClick="onClick"/>
    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/E"
            android:text="@string/E"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/F"
            android:text="@string/F"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/sign"
            android:text="@string/sign"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/zero"
            android:text="@string/zero"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/dot"
            android:text="@string/dot"
            android:onClick="onClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/equal"
            android:text="@string/equal"
            android:onClick="onClick"/>
    </TableRow>
</TableLayout>


</TableLayout>
