<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.calculator.SimpleFragment"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_marginBottom="10dp">
        <TableRow>
            <EditText
                android:id="@+id/viewNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_span="4"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/clear"
                android:text="@string/clear"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/divide"
                android:text="@string/divide"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/multiply"
                android:text="@string/multiply"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:onClick="onClick"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seven"
                android:text="@string/seven"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eight"
                android:text="@string/eight"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nine"
                android:text="@string/nine"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/minus"
                android:text="@string/minus"
                android:onClick="onClick"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/four"
                android:text="@string/four"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/five"
                android:text="@string/five"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/six"
                android:text="@string/six"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/plus"
                android:text="@string/plus"
                android:onClick="onClick"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/one"
                android:text="@string/one"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/two"
                android:text="@string/two"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/three"
                android:text="@string/three"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/brackets"
                android:text="@string/brackets"
                android:onClick="onClick"/>
        </TableRow>
        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/zero"
                android:text="@string/zero"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dot"
                android:text="@string/dot"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign"
                android:text="@string/sign"
                android:onClick="onClick"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/equal"
                android:text="@string/equal"
                android:onClick="onClick"/>
        </TableRow>
    </TableLayout>
</ScrollView>